--- a/src/app/user/user-list-container/user-list-presentation/user-list-presentation.component.html
+++ b/src/app/user/user-list-container/user-list-presentation/user-list-presentation.component.html
@@ -11,16 +11,15 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let user of users">
-       
-       
-        
+      <tr *ngFor="let user of users; index as i">
         <td>{{user.name}}</td>
         <td>{{user.email}}</td> 
         <td>{{user.mobile}}</td>
         <td>{{user.city}}</td>
         <td>{{user.department}}</td>
-   
+        <td>
+          <button (click)="delete(i)">Delete</button>
+        </td>
     </tr>
      
  </tbody>
