--- a/src/app/user/user-form-container/user-form-presentation/user-form-presentation.component.html
+++ b/src/app/user/user-form-container/user-form-presentation/user-form-presentation.component.html
@@ -1,5 +1,9 @@
 <div class='container'>
     <form class="row g-3" [formGroup]="userForm" (ngSubmit)="onSubmit()">
+      <div class="col-md-6">
+        <label for="inputPassword4" class="form-label">id</label>
+        <input type="text" formControlName="id" class="form-control" id="inputPassword4">
+      </div>
         <div class="col-md-6">
             <label for="inputPassword4" class="form-label">Name</label>
             <input type="text" formControlName="name" class="form-control" id="inputPassword4">
