--- a/src/app/user/user-list-container/user-list-presentation/user-list-presentation.component.html
+++ b/src/app/user/user-list-container/user-list-presentation/user-list-presentation.component.html
@@ -2,7 +2,7 @@
     <table class="table">
     <thead>
       <tr>
-       
+        <th scope="col">Id</th>
         <th scope="col">Full Name</th>
         <th scope="col">Email</th>
         <th scope="col">Mobile</th>
@@ -11,14 +11,15 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let user of users; index as i">
+      <tr *ngFor="let user of users;">
+        <td>{{user.id}}</td>
         <td>{{user.name}}</td>
         <td>{{user.email}}</td> 
         <td>{{user.mobile}}</td>
         <td>{{user.city}}</td>
         <td>{{user.department}}</td>
         <td>
-          <button (click)="delete(i)">Delete</button>
+          <button (click)="delete(user.id)">Delete</button>
         </td>
     </tr>
      
